# crud-rocket-postgres

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2020-04-09-155453_heroes/: up.sql
src/: db.rs  errors.rs  main.rs  schema.rs
src/crud/: crud_hero.rs  mod.rs
src/fairings/: mod.rs  post_request.rs
src/models/: hero.rs  mod.rs
