[package]
name = "rocket-api"
version = "0.1.0"
authors = ["Roux ReÌmy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0.104"
serde_json = "1.0.51"
serde_derive = "1.0.104"
diesel = { version = "1.4.3", features = ["postgres","r2d2"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]