[package]
name = "rocket-api"
version = "0.1.0"
authors = ["Roux Rémy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0.106"
serde_json = "1.0.52"
serde_derive = "1.0.106"
diesel = { version = "1.4.4", features = ["postgres","r2d2"] }
dotenv = "0.15.0"
# rocket_okapi for swagger doc
rocket_okapi = "0.4.1"
schemars = "0.7.2"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
